ch8-k8s-deployment/httpserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  name: http-service
  labels:
    app: httpserver
spec:
  selector:    
    app: httpserver
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
