ch8-k8s-deployment/httpserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  name: httpserver-ingress
spec:  
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: http-service
              port:
                number: 80
